Fixed overflow bug

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -76,6 +76,7 @@ img {
     flex-direction: column;
     align-items: center;
     background-color: var(--background-purple);
+    overflow: hidden;
 }
 
 .header__textbox {
@@ -165,6 +166,7 @@ img {
 
 .header__img {
     margin-right: -50rem;
+
 }
 }
 
